<resources>
    <string name="app_name">FlyingAround</string>
    <string name="search">SEARCH</string>
    <string name="signature">by Maks Gwizdala</string>
    <string name="init_failed">Initialization failed</string>
    <string name="retry">Retry</string>
    <string name="incorrect_departure_time">Incorrect departure time!</string>
    <string name="incorrect_destination">Incorrect destination!</string>
    <string name="incorrect_origin_station">Incorrect origin station!</string>
    <string name="incorrect_adults_number">Incorrect number of adults!</string>
    <string name="date_format">%d-%d-%d</string>
    <string name="discount">Discount:</string>
    <string name="fare_class">Fare Class:</string>
    <string name="infants_left">Infants Left:</string>
    <string name="destination">Destination:</string>
    <string name="origin">Origin:</string>
    <string name="flight_details">Flight details</string>
    <string name="search_result_is_empty">Search result is empty!</string>
</resources>