<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".search.view.SearchActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/searchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:text="@string/search"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitle="@string/signature"
        app:subtitleTextColor="@android:color/white"
        app:title="@string/app_name"
        app:titleTextColor="@color/colorAccent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/formContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/margin_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <AutoCompleteTextView
            android:id="@+id/originAutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:hint="Origin station"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <AutoCompleteTextView
            android:id="@+id/destinationAutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Destination station"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/originAutoCompleteTextView" />

        <EditText
            android:inputType="none"
            android:focusable="false"
            android:id="@+id/departureEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Departure"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/destinationAutoCompleteTextView" />

        <EditText
            android:id="@+id/adultsEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Number of adults"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/departureEditText" />

        <EditText
            android:id="@+id/teensEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Number of teens"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/adultsEditText" />

        <EditText
            android:id="@+id/childrenEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Number of children"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/teensEditText" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>